updated urls in index template

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1128,17 +1128,13 @@
         <div class="row">
           <div class="col-lg-5 ms-auto">
             <h4 class="mb-1">Thank you for your support!</h4>
-            <p class="lead mb-0">We deliver the best web products</p>
           </div>
           <div class="col-lg-5 me-lg-auto my-lg-auto text-lg-end mt-5">
-            <a href="https://twitter.com/intent/tweet?text=Check%20Material%20UI%20Kit%20made%20by%20%40CreativeTim%20%23webdesign%20%23designsystem%20%23bootstrap5&url=https%3A%2F%2Fwww.creative-tim.com%2Fproduct%2Fmaterial-kit" class="btn btn-twitter mb-0 me-2" target="_blank">
+            <a href="https://twitter.com/intent/tweet?text=Check+out+Maine-eDNA+metadata+-+a+data+management+system+for+tracking+environmental+DNA+samples%3A+https%3A%2F%2Fgithub.com%2FMaine-eDNA%2Fmedna-metadata" class="btn btn-twitter mb-0 me-2" target="_blank">
               <i class="fab fa-twitter me-1"></i> Tweet
             </a>
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://appseed.us/product/django-material-kit" class="btn btn-facebook mb-0 me-2" target="_blank">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://github.com/Maine-eDNA/medna-metadata" class="btn btn-facebook mb-0 me-2" target="_blank">
               <i class="fab fa-facebook-square me-1"></i> Share
-            </a>
-            <a href="https://www.pinterest.com/pin/create/button/?url=https://appseed.us/product/django-material-kit" class="btn btn-pinterest mb-0 me-2" target="_blank">
-              <i class="fab fa-pinterest me-1"></i> Pin it
             </a>
           </div>
         </div>
