--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1047,10 +1047,10 @@
         <div class="container py-7 postion-relative z-index-2 position-relative">
           <div class="row">
             <div class="col-md-7 mx-auto text-center">
-              <h3 class="text-white mb-0">Do you love this awesome</h3>
-              <h3 class="text-white">UI Kit for Bootstrap 5?</h3>
-              <p class="text-white mb-5">Cause if you do, it can be yours for FREE. Hit the button below to navigate to Creative Tim where you can find the Design System in HTML. Start a new project or give an old Bootstrap project a new look!</p>
-              <a href="https://appseed.us/product/django-material-kit" target="_blank" class="btn btn-primary btn-lg mb-3 mb-sm-0">Download</a>
+              <h3 class="text-white mb-0">Do you want to be a contributor to the</h3>
+              <h3 class="text-white">Maine-eDNA Metadata project?</h3>
+              <p class="text-white mb-5">Follow the link below to the repository!</p>
+              <a href="https://github.com/Maine-eDNA/medna-metadata" target="_blank" class="btn btn-primary btn-lg mb-3 mb-sm-0">Repository</a>
             </div>
           </div>
         </div>
@@ -1059,7 +1059,7 @@
         <div class="row">
           <div class="col-6 mx-auto">
             <div class="text-center">
-              <h3 class="mt-5 mb-4">Available on these technologies</h3>
+              <h3 class="mt-5 mb-4">This project was built utilizing these sources</h3>
               <div class="row justify-content-center">
                 <div class="col-lg-2 col-4">
                   <a href="https://www.creative-tim.com/product/soft-ui-design-system?AFFILIATE=128200" target="_blank">
