updated template references in frontend

--- a/frontend/templates/account/django-datta-able/login.html
+++ b/frontend/templates/account/django-datta-able/login.html
@@ -53,7 +53,7 @@
 
                     </form>
 
-                    <p class="mb-0 text-muted">Don’t have an account? <a href="{% url 'dashboard_register' %}" >Sign UP</a></p>
+                    <p class="mb-0 text-muted">Don’t have an account? <a href="{% url 'dashboard_register' %}" >Sign up</a></p>
                     <br />
                 </div>
             </div>
