--- a/frontend/templates/account/django-material-kit/register.html
+++ b/frontend/templates/account/django-material-kit/register.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-kit/base-fullscreen.html" %}
 {% load static %}
 
-{% block title %} Sign UP {% endblock %} 
+{% block title %} Sign up {% endblock %}
 
 {% block body_class %} sign-in-basic {% endblock %}
 
@@ -21,7 +21,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
                 <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
-                  Django Material Kit
+                  Maine-eDNA Metadata
                 </h4>
                 <div class="row mt-3">
                   <p class="mb-0 text-white text-center">
@@ -70,7 +70,7 @@
                   </div>
                   <div class="text-center">
                     <button type="submit" name="register" 
-                            class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Sign Up</button>
+                            class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Sign up</button>
                   </div>
                   <p class="mt-4 text-sm text-center">
                     Already have an account?
