--- a/frontend/templates/home/django-material-kit/ui-navigation-pagination.html
+++ b/frontend/templates/home/django-material-kit/ui-navigation-pagination.html
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
 
   <title>
-    Maine-eDNA Metadata - Pagination | AppSeed
+    Maine-eDNA Metadata - Pagination | Maine EPSCoR
   </title>
 
   <!--     Fonts and icons     -->
