--- a/frontend/templates/home/django-material-kit/sign-in.html
+++ b/frontend/templates/home/django-material-kit/sign-in.html
@@ -59,7 +59,7 @@
                 </div>
                 <p class="mt-4 text-sm text-center">
                   Don't have an account?
-                  <a href="/main/sign-up.html" class="text-primary text-gradient font-weight-bold">Sign UP</a>
+                  <a href="/main/sign-up.html" class="text-primary text-gradient font-weight-bold">Sign up</a>
                 </p>
               </form>
             </div>
