--- a/frontend/templates/home/django-material-kit/sign-up.html
+++ b/frontend/templates/home/django-material-kit/sign-up.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-kit/base-fullscreen.html" %}
 {% load static %}
 
-{% block title %} Sign UP {% endblock %} 
+{% block title %} Sign up {% endblock %}
 
 {% block body_class %} sign-in-basic {% endblock %}
 
@@ -20,7 +20,7 @@
           <div class="card z-index-0 fadeIn3 fadeInBottom">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
-                <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Sign UP</h4>
+                <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Sign up</h4>
                 <div class="row mt-3">
                   <div class="col-2 text-center ms-auto">
                     <a class="btn btn-link px-3" href="javascript:;">
@@ -59,7 +59,7 @@
                   <label class="form-check-label mb-0 ms-2" for="rememberMe">Remember me</label>
                 </div>
                 <div class="text-center">
-                  <button type="button" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign UP</button>
+                  <button type="button" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign up</button>
                 </div>
                 <p class="mt-4 text-sm text-center">
                   Already have an account?
