--- a/frontend/templates/includes/django-material-kit/footer-auth.html
+++ b/frontend/templates/includes/django-material-kit/footer-auth.html
@@ -10,13 +10,13 @@
           <div class="col-12 col-md-6">
             <ul class="nav nav-footer justify-content-center justify-content-lg-end">
               <li class="nav-item">
-                <a href="https://github.com/app-generator/django-material-kit" class="nav-link text-white" target="_blank">Sources</a>
+                <a href="https://github.com/Maine-eDNA/medna-metadata" class="nav-link text-white" target="_blank">Sources</a>
               </li>
               <li class="nav-item">
-                <a href="https://appseed.us/support" class="nav-link text-white" target="_blank">Support</a>
+                <a href="https://umaine.edu/" class="nav-link text-white" target="_blank">UMaine</a>
               </li>
               <li class="nav-item">
-                <a href="https://appseed.us" class="nav-link text-white" target="_blank">AppSeed</a>
+                <a href="https://umaine.edu/edna" class="nav-link text-white" target="_blank">Maine-eDNA</a>
               </li>
             </ul>
           </div>
