updated index and references in templates for frontend

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1067,8 +1067,8 @@
                   </a>
                 </div>
                 <div class="col-lg-2 col-4">
-                  <a href="javascript:;">
-                    <img src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/logos/icon-tailwind.jpg" class="img-fluid opacity-6" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Comming soon">
+                  <a href="https://github.com/app-generator/django-material-kit">
+                    <img src="{% static 'assets/img/django-material-kit/logo-ct-dark.png' %}" class="img-fluid opacity-6" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Comming soon">
                   </a>
                 </div>
                 <div class="col-lg-2 col-4">
@@ -1149,7 +1149,7 @@
         <div class="col-md-3 mb-4 ms-auto">
           <div>
             <a href="https://umaine.edu/edna">
-              <img src="{% static 'assets/img/django-material-kit/logo-ct-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
+              <img src="{% static 'assets/img/django-material-kit/logo-medna-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
             </a>
             <h6 class="font-weight-bolder mb-4">Maine-eDNA Metadata</h6>
           </div>
