--- a/frontend/templates/includes/django-material-kit/footer-auth.html
+++ b/frontend/templates/includes/django-material-kit/footer-auth.html
@@ -13,7 +13,7 @@
                 <a href="https://github.com/Maine-eDNA/medna-metadata" class="nav-link text-white" target="_blank">Sources</a>
               </li>
               <li class="nav-item">
-                <a href="https://umaine.edu/" class="nav-link text-white" target="_blank">UMaine</a>
+                <a href="https://umaine.edu/" class="nav-link text-white" target="_blank">University of Maine</a>
               </li>
               <li class="nav-item">
                 <a href="https://umaine.edu/edna" class="nav-link text-white" target="_blank">Maine-eDNA</a>
