--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -322,7 +322,7 @@
                   <li class="nav-item list-group-item border-0 p-0">
                     <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="/main/support">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
-                      <span class="text-sm">Get support from experts (email and Discord)</span>
+                      <span class="text-sm">Get support from experts</span>
                     </a>
                   </li>
                   <li class="nav-item list-group-item border-0 p-0">
