fixed references to consolidated staticfiles in templates for frontend

--- a/frontend/templates/account/django-material-dashboard/login.html
+++ b/frontend/templates/account/django-material-dashboard/login.html
@@ -1,4 +1,5 @@
 {% extends "layouts/django-material-dashboard/base-fullscreen.html" %}
+{% load static %}
 
 {% block title %} Sign IN {% endblock %} 
 
