--- a/frontend/templates/home/django-material-kit/ui-sections-features.html
+++ b/frontend/templates/home/django-material-kit/ui-sections-features.html
@@ -18,8 +18,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/django-material-kit/medna-icon.png' %}">
-  <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-kit/favicon.png' %}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/medna-icon.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
 
   <title>
     Maine-eDNA Metadata - Features | Maine EPSCoR
@@ -28,14 +28,14 @@
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/nucleo-icons.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/nucleo-svg.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-icons.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nucleo-svg.css' %}">
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/material-kit.css' %}">
+  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/material-kit.css' %}">
 
 </head>
 <body class="features-sections">
