--- a/frontend/templates/includes/django-material-dashboard/fixed-plugin.html
+++ b/frontend/templates/includes/django-material-dashboard/fixed-plugin.html
@@ -1,4 +1,4 @@
-
+{% load static %}
   <div class="fixed-plugin">
     <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
       <i class="material-icons py-2">settings</i>
