--- a/frontend/templates/includes/django-material-dashboard/footer.html
+++ b/frontend/templates/includes/django-material-dashboard/footer.html
@@ -1,3 +1,4 @@
+{% load static %}
       <footer class="footer pt-5">
         <div class="container-fluid">
           <div class="row align-items-center justify-content-lg-between">
