--- a/frontend/templates/includes/django-material-dashboard/scripts.html
+++ b/frontend/templates/includes/django-material-dashboard/scripts.html
@@ -1,5 +1,6 @@
-  <script src="{% static 'assets/js/django-material-dashboard/core/popper.min.js' %}"></script>
-  <script src="{% static 'assets/js/django-material-dashboard/core/bootstrap.min.js' %}"></script>
-  <script src="{% static 'assets/js/django-material-dashboard/plugins/perfect-scrollbar.min.js' %}"></script>
-  <script src="{% static 'assets/js/django-material-dashboard/plugins/smooth-scrollbar.min.js' %}"></script>
+{% load static %}
+  <script src="{% static 'assets/js/core/popper.min.js' %}"></script>
+  <script src="{% static 'assets/js/core/bootstrap.min.js' %}"></script>
+  <script src="{% static 'assets/js/plugins/perfect-scrollbar.min.js' %}"></script>
+  <script src="{% static 'assets/js/plugins/smooth-scrollbar.min.js' %}"></script>
   
