--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -21,7 +21,7 @@
                   <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md">dashboard</i>
                     Pages
-                    <img src="{% static 'assets/img/django-material-kit/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
+                    <img src="{% static 'assets/img/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
                   </a>
                   <div class="dropdown-menu dropdown-menu-animation ms-n3 dropdown-md p-3 border-radius-xl mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
                     <div class="d-none d-lg-block">
@@ -70,7 +70,7 @@
                   <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuBlocks" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md">view_day</i>
                     Sections
-                    <img src="{% static 'assets/img/django-material-kit/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
+                    <img src="{% static 'assets/img/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
                     <div class="d-none d-lg-block">
@@ -81,7 +81,7 @@
                               <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Page Sections</h6>
                               <span class="text-sm">See all sections</span>
                             </div>
-                            <img src="{% static 'assets/img/django-material-kit/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                            <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -100,7 +100,7 @@
                               <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Navigation</h6>
                               <span class="text-sm">See all navigations</span>
                             </div>
-                            <img src="{% static 'assets/img/django-material-kit/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                            <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -122,7 +122,7 @@
                               <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Input Areas</h6>
                               <span class="text-sm">See all input areas</span>
                             </div>
-                            <img src="{% static 'assets/img/django-material-kit/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                            <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -141,7 +141,7 @@
                               <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Attention Catchers</h6>
                               <span class="text-sm">See all examples</span>
                             </div>
-                            <img src="{% static 'assets/img/django-material-kit/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                            <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -163,7 +163,7 @@
                               <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Elements</h6>
                               <span class="text-sm">See all elements</span>
                             </div>
-                            <img src="{% static 'assets/img/django-material-kit/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                            <img src="{% static 'assets/img/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
@@ -308,7 +308,7 @@
                   <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuDocs" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md">article</i>
                     Help
-                    <img src="{% static 'assets/img/django-material-kit/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
+                    <img src="{% static 'assets/img/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive mt-0 mt-lg-3 p-3 border-radius-lg" aria-labelledby="dropdownMenuDocs">
                     <div class="d-none d-lg-block">
