--- a/frontend/templates/account/django-material-dashboard/register.html
+++ b/frontend/templates/account/django-material-dashboard/register.html
@@ -1,4 +1,5 @@
 {% extends "layouts/django-material-dashboard/base-fullscreen.html" %}
+{% load static %}
 
 {% block title %} Sign UP {% endblock %} 
 
@@ -12,7 +13,7 @@
         <div class="container">
           <div class="row">
             <div class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column">
-              <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center" style="background-image: url('{% static 'assets/img/django-material-dashboard/illustrations/illustration-signup.jpg' %}'); background-size: cover;">
+              <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center" style="background-image: url('{% static 'assets/img/illustrations/illustration-signup.jpg' %}'); background-size: cover;">
               </div>
             </div>
             <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column ms-auto me-auto ms-lg-auto me-lg-5">
