--- a/frontend/templates/home/django-material-dashboard/profile.html
+++ b/frontend/templates/home/django-material-dashboard/profile.html
@@ -1,4 +1,5 @@
 {% extends "layouts/django-material-dashboard/base.html" %}
+{% load static %}
 
 {% block title %} Profile {% endblock %} 
 
@@ -16,7 +17,7 @@
         <div class="row gx-4 mb-2">
           <div class="col-auto">
             <div class="avatar avatar-xl position-relative">
-              <img src="{% static 'assets/img/django-material-dashboard/bruce-mars.jpg' %}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+              <img src="{% static 'assets/img/bruce-mars.jpg' %}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
             </div>
           </div>
           <div class="col-auto my-auto">
@@ -156,7 +157,7 @@
                   <ul class="list-group">
                     <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2 pt-0">
                       <div class="avatar me-3">
-                        <img src="{% static 'assets/img/django-material-dashboard/kal-visuals-square.jpg' %}" alt="kal" class="border-radius-lg shadow">
+                        <img src="{% static 'assets/img/kal-visuals-square.jpg' %}" alt="kal" class="border-radius-lg shadow">
                       </div>
                       <div class="d-flex align-items-start flex-column justify-content-center">
                         <h6 class="mb-0 text-sm">Sophie B.</h6>
@@ -166,7 +167,7 @@
                     </li>
                     <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
                       <div class="avatar me-3">
-                        <img src="{% static 'assets/img/django-material-dashboard/marie.jpg' %}" alt="kal" class="border-radius-lg shadow">
+                        <img src="{% static 'assets/img/marie.jpg' %}" alt="kal" class="border-radius-lg shadow">
                       </div>
                       <div class="d-flex align-items-start flex-column justify-content-center">
                         <h6 class="mb-0 text-sm">Anne Marie</h6>
