--- a/frontend/templates/home/django-material-dashboard/rtl.html
+++ b/frontend/templates/home/django-material-dashboard/rtl.html
@@ -1,4 +1,5 @@
 {% extends "layouts/django-material-dashboard/base-rtl.html" %}
+{% load static %}
 
 {% block title %} RTL {% endblock %} 
 
@@ -185,7 +186,7 @@
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div>
-                            <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-xd.svg' %}" class="avatar avatar-sm ms-3">
+                            <img src="{% static 'assets/img/small-logos/logo-xd.svg' %}" class="avatar avatar-sm ms-3">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">Material XD الإصدار</h6>
@@ -195,16 +196,16 @@
                       <td>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-1.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-2.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-3.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg' %}">
                           </a>
                         </div>
                       </td>
@@ -228,7 +229,7 @@
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div>
-                            <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-atlassian.svg' %}" class="avatar avatar-sm ms-3">
+                            <img src="{% static 'assets/img/small-logos/logo-atlassian.svg' %}" class="avatar avatar-sm ms-3">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">أضف مسار التقدم إلى التطبيق الداخلي</h6>
@@ -238,10 +239,10 @@
                       <td>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-2.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg' %}">
                           </a>
                         </div>
                       </td>
@@ -265,7 +266,7 @@
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div>
-                            <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-slack.svg' %}" class="avatar avatar-sm ms-3">
+                            <img src="{% static 'assets/img/small-logos/logo-slack.svg' %}" class="avatar avatar-sm ms-3">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">إصلاح أخطاء النظام الأساسي</h6>
@@ -275,10 +276,10 @@
                       <td>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-3.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-1.jpg' %}">
                           </a>
                         </div>
                       </td>
@@ -302,7 +303,7 @@
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div>
-                            <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-spotify.svg' %}" class="avatar avatar-sm ms-3">
+                            <img src="{% static 'assets/img/small-logos/logo-spotify.svg' %}" class="avatar avatar-sm ms-3">
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">إطلاق تطبيق الهاتف المحمول الخاص بنا</h6>
@@ -312,16 +313,16 @@
                       <td>
                         <div class="avatar-group mt-2">
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-3.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg' %}">
                           </a>
                           <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
-                            <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}">
+                            <img alt="Image placeholder" src="{% static 'assets/img/team-1.jpg' %}">
                           </a>
                         </div>
                       </td>
