--- a/frontend/templates/home/django-material-dashboard/sign-in.html
+++ b/frontend/templates/home/django-material-dashboard/sign-in.html
@@ -1,4 +1,5 @@
 {% extends "layouts/django-material-dashboard/base-fullscreen.html" %}
+{% load static %}
 
 {% block title %} Sign IN {% endblock %} 
 
