--- a/frontend/templates/home/django-material-dashboard/virtual-reality.html
+++ b/frontend/templates/home/django-material-dashboard/virtual-reality.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!--
 =========================================================
 * Material Dashboard 2 - v3.0.0
@@ -18,22 +19,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/django-material-dashboard/apple-icon.png' %}">
-  <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-dashboard/favicon.png' %}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/apple-icon.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
   <title>
     Material Dashboard 2 by Creative Tim
   </title>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
-  <link href="{% static 'assets/css/django-material-dashboard/nucleo-icons.css' %}" rel="stylesheet" />
-  <link href="{% static 'assets/css/django-material-dashboard/nucleo-svg.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/nucleo-icons.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/nucleo-svg.css' %}" rel="stylesheet" />
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" href="{% static 'assets/css/django-material-dashboard/material-dashboard.css?v=3.0.0' %}" rel="stylesheet" />
+  <link id="pagestyle" href="{% static 'assets/css/material-dashboard.css?v=3.0.0' %}" rel="stylesheet" />
 
 </head>
 <body class="g-sidenav-show  bg-gray-200 virtual-reality">
@@ -42,7 +43,7 @@
     {% include 'home/django-material-dashboard/navigation.html' %}
   </div>
 
-  <div class="border-radius-xl mx-2 mx-md-3 position-relative" style="background-image: url('{% static 'assets/img/django-material-dashboard/vr-bg.jpg' %}'); background-size: cover;">
+  <div class="border-radius-xl mx-2 mx-md-3 position-relative" style="background-image: url('{% static 'assets/img/vr-bg.jpg' %}'); background-size: cover;">
 
     {% include 'home/django-material-dashboard/sidebar.html' %}
 
@@ -52,7 +53,7 @@
           <div class="row pt-10">
             <div class="col-lg-1 col-md-1 pt-5 pt-lg-0 ms-lg-5 text-center">
               <a href="javascript:;" class="avatar avatar-lg border-0 p-1" data-bs-toggle="tooltip" data-bs-placement="right" title="My Profile">
-                <img class="border-radius-lg" alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}">
+                <img class="border-radius-lg" alt="Image placeholder" src="{% static 'assets/img/team-1.jpg' %}">
               </a>
               <button class="btn btn-white border-radius-lg p-2 mt-n4 mt-md-2" type="button" data-bs-toggle="tooltip" data-bs-placement="right" title="Home">
                 <i class="material-icons p-2">home</i>
@@ -71,7 +72,7 @@
                   <h6 class="text-uppercase mb-0 ms-1 text-white">Cloudy</h6>
                 </div>
                 <div class="ms-auto">
-                  <img class="w-50 float-end mt-n6 mt-lg-n4" src="{% static 'assets/img/django-material-dashboard/small-logos/icon-sun-cloud.png' %}" alt="image sun">
+                  <img class="w-50 float-end mt-n6 mt-lg-n4" src="{% static 'assets/img/small-logos/icon-sun-cloud.png' %}" alt="image sun">
                 </div>
               </div>
               <div class="row mt-4">
@@ -160,16 +161,16 @@
                         <div class="ms-auto">
                           <div class="avatar-group">
                             <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="2 New Messages">
-                              <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-1.jpg' %}">
+                              <img alt="Image placeholder" src="{% static 'assets/img/team-1.jpg' %}">
                             </a>
                             <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="1 New Message">
-                              <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}">
+                              <img alt="Image placeholder" src="{% static 'assets/img/team-2.jpg' %}">
                             </a>
                             <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="13 New Messages">
-                              <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-3.jpg' %}">
+                              <img alt="Image placeholder" src="{% static 'assets/img/team-3.jpg' %}">
                             </a>
                             <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="7 New Messages">
-                              <img alt="Image placeholder" src="{% static 'assets/img/django-material-dashboard/team-4.jpg' %}">
+                              <img alt="Image placeholder" src="{% static 'assets/img/team-4.jpg' %}">
                             </a>
                           </div>
                         </div>
@@ -203,7 +204,7 @@
   <!-- Github buttons -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="{% static 'assets/js/django-material-dashboard/material-dashboard.min.js?v=3.0.0' %}"></script>
+  <script src="{% static 'assets/js/material-dashboard.min.js?v=3.0.0' %}"></script>
 </body>
 
 </html>
