--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -13,7 +13,7 @@
   {% include 'includes/django-material-kit/navigation-transparent.html' %}
 
   <header class="bg-gradient-dark">
-    <div class="page-header min-vh-75" style="background-image: url('{% static 'assets/img/django-material-kit/bg9.jpg');">
+    <div class="page-header min-vh-75" style="background-image: url('{% static 'assets/img/bg9.jpg');">
       <span class="mask bg-gradient-dark opacity-6"></span>
       <div class="container">
         <div class="row justify-content-center">
