--- a/frontend/templates/includes/django-material-dashboard/navigation.html
+++ b/frontend/templates/includes/django-material-dashboard/navigation.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- Navbar -->
     <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
       <div class="container-fluid py-1 px-3">
@@ -45,7 +46,7 @@
                   <a class="dropdown-item border-radius-md" href="javascript:;">
                     <div class="d-flex py-1">
                       <div class="my-auto">
-                        <img src="{% static 'assets/img/django-material-dashboard/team-2.jpg' %}" class="avatar avatar-sm  me-3 ">
+                        <img src="{% static 'assets/img/team-2.jpg' %}" class="avatar avatar-sm  me-3 ">
                       </div>
                       <div class="d-flex flex-column justify-content-center">
                         <h6 class="text-sm font-weight-normal mb-1">
@@ -63,7 +64,7 @@
                   <a class="dropdown-item border-radius-md" href="javascript:;">
                     <div class="d-flex py-1">
                       <div class="my-auto">
-                        <img src="{% static 'assets/img/django-material-dashboard/small-logos/logo-spotify.svg' %}" class="avatar avatar-sm bg-gradient-dark  me-3 ">
+                        <img src="{% static 'assets/img/small-logos/logo-spotify.svg' %}" class="avatar avatar-sm bg-gradient-dark  me-3 ">
                       </div>
                       <div class="d-flex flex-column justify-content-center">
                         <h6 class="text-sm font-weight-normal mb-1">
