--- a/frontend/templates/includes/django-material-dashboard/sidebar-rtl.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar-rtl.html
@@ -1,8 +1,9 @@
+{% load static %}
   <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-end me-3 rotate-caret  bg-gradient-dark" id="sidenav-main">
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute start-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="https://appseed.us/admin-dashboards/django-dashboard-material" target="_blank">
-        <img src="{% static 'assets/img/django-material-dashboard/logo-ct.png' %}" class="navbar-brand-img h-100" alt="main_logo">
+        <img src="{% static 'assets/img/logo-ct.png' %}" class="navbar-brand-img h-100" alt="main_logo">
         <span class="me-1 font-weight-bold text-white">Material Dashboard 2</span>
       </a>
     </div>
