--- a/frontend/templates/layouts/django-material-dashboard/base-fullscreen.html
+++ b/frontend/templates/layouts/django-material-dashboard/base-fullscreen.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!--
 =========================================================
 * Material Dashboard 2 - v3.0.0
@@ -18,22 +19,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/django-material-dashboard/apple-icon.png' %}">
-  <link rel="icon" type="image/png" href="{% static 'assets/img/django-material-dashboard/favicon.png' %}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/apple-icon.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
   <title>
     Django Material Dashboard 2 - {% block title %}{% endblock %} | AppSeed
   </title>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
-  <link href="{% static 'assets/css/django-material-dashboard/nucleo-icons.css' %}" rel="stylesheet" />
-  <link href="{% static 'assets/css/django-material-dashboard/nucleo-svg.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/nucleo-icons.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/nucleo-svg.css' %}" rel="stylesheet" />
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" href="{% static 'assets/css/django-material-dashboard/material-dashboard.css?v=3.0.0' %}" rel="stylesheet" />
+  <link id="pagestyle" href="{% static 'assets/css/material-dashboard.css?v=3.0.0' %}" rel="stylesheet" />
 
   {% block stylesheets %}{% endblock stylesheets %}
 
@@ -65,7 +66,7 @@
   <!-- Github buttons -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="{% static 'assets/js/django-material-dashboard/material-dashboard.min.js?v=3.0.0' %}"></script>
+  <script src="{% static 'assets/js/material-dashboard.min.js?v=3.0.0' %}"></script>
 
 </body> 
 </html>
